--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,18 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Fira Sans", sans-serif;
   font-style: 16px;
   color: #111238;
   margin: 0;
+}
+
+.header {
+  background: #f2f3f6;
 }
 
 .menu {
@@ -21,6 +31,8 @@ body {
 .button {
   text-decoration: none;
   display: inline-block;
+  border: none;
+  font-size: 16px;
 }
 
 .button-link {
@@ -34,4 +46,91 @@ body {
   border-radius: 5px;
   padding: 15px 30px;
   color: #fff;
+}
+
+.buttton-icon {
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
+.button-tex {
+  vertical-align: middle;
+}
+
+.hero-title {
+  font-size: 44px;
+  line-height: 53px;
+  margin-bottom: 15px;
+  margin-bottom: 43px;
+}
+
+.hero-text {
+  font-size: 18px;
+  line-height: 140%;
+  margin-bottom: 30px;
+}
+
+.input-group {
+  background: #ffffff;
+  border: 1px solid rgba(209, 209, 209, 0.1);
+  box-shadow: 0px 4px 25px rgba(15, 17, 56, 0.1);
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 25px;
+}
+
+.input {
+  background-color: #ffffff;
+  border: none;
+  flex-grow: 1;
+  font-size: 16px;
+  line-height: 19px;
+  padding-left: 15px;
+}
+
+.tags-group {
+  padding-left: 15px;
+  color: #b2b2b2;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.tag {
+  color: #b2b2b2;
+  text-decoration: none;
+  padding: 5px 10px;
+  margin-left: 10px;
+  border: 1px solid #b2b2b2;
+  border-radius: 5px;
+}
+
+.section {
+  padding-top: 70px;
+  padding-bottom: 80px;
+}
+
+.section-title {
+  margin-bottom: 40px;
+  margin-top: 0;
+}
+.card {
+  text-decoration: none;
+  color: #111238;
+  background: #f2f3f6;
+  border-radius: 10px;
+  padding: 35px;
+  transition: background 0.2s, color 0.2s;
+}
+.card:hover {
+  background: #1a75e8;
+  color: #ffffff;
+}
+.card:hover .card-icon {
+  fill: #ffffff;
+}
+
+.card-icon {
+  fill: #111238;
+  margin-bottom: 15px;
+  transition: fill 0.2s;
 }
