--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
   margin: 0;
 }
 
+img {
+  max-width: 100%;
+}
+
 .header {
   background: #f2f3f6;
 }
@@ -50,11 +54,11 @@ body {
 
 .buttton-icon {
   vertical-align: middle;
-  margin-right: 10px;
 }
 
-.button-tex {
+.button-text {
   vertical-align: middle;
+  margin-left: 10px;
 }
 
 .hero-title {
@@ -89,7 +93,6 @@ body {
 }
 
 .tags-group {
-  padding-left: 15px;
   color: #b2b2b2;
   font-size: 14px;
   line-height: 17px;
@@ -252,4 +255,85 @@ body {
   line-height: 19px;
   text-decoration: none;
   color: #111238;
+}
+
+@media (max-width: 1200px) {
+  .offer-salary {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+  .more {
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 992px) {
+  .more {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .offer-title {
+    text-align: center;
+    margin-left: 0;
+  }
+  .tag {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .navbar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+  }
+  .is-open {
+    transform: translateX(0%);
+  }
+  .menu-item:not(:last-child) {
+    margin-right: 0;
+  }
+  .button-link {
+    margin-right: 0;
+  }
+  .close-button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    text-align: right;
+    text-decoration: none;
+    font-size: 24px;
+    padding: 20px;
+  }
+}
+
+@media (max-width: 576px) {
+  .tags-label {
+    display: block;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .hero {
+    text-align: center;
+  }
+  .hero-title {
+    font-size: 24px;
+    line-height: 1.4;
+  }
+  .footer {
+    text-align: center;
+  }
+
+  .card {
+    max-width: 250px;
+    margin: auto;
+  }
+  .section-title {
+    text-align: center;
+  }
 }
